--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ LocalSettings/
 LocalSettings.meta
 lfs/
 ArtSourceSpritesPostProcessed/
+Recordings/
 
 #######    Unity generated      #######
 Temp/
