--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.google.external-dependency-manager": "1.2.161",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.burst": "1.2.3",
+    "com.unity.device-simulator": "2.2.3-preview",
     "com.unity.entities": "0.1.1-preview",
     "com.unity.ide.vscode": "1.2.3",
     "com.unity.mobile.notifications": "1.3.0",
