--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.google.external-dependency-manager": "1.2.161",
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.analytics": "3.3.5",
     "com.unity.burst": "1.2.3",
     "com.unity.device-simulator": "2.2.3-preview",
     "com.unity.entities": "0.1.1-preview",
