--- a/.gitattributes
+++ b/.gitattributes
@@ -48,4 +48,5 @@
 *.so filter=lfs diff=lfs merge=lfs -text
 *.framework filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
+**/Fonts/*.asset filter=lfs diff=lfs merge=lfs -text
 */Fonts/*.asset filter=lfs diff=lfs merge=lfs -text
