--- a/.gitattributes
+++ b/.gitattributes
@@ -49,4 +49,8 @@
 *.framework filter=lfs diff=lfs merge=lfs -text
 *.bin filter=lfs diff=lfs merge=lfs -text
 **/Fonts/*.asset filter=lfs diff=lfs merge=lfs -text
+**/Fonts[[:space:]]&[[:space:]]Materials/*.asset filter=lfs diff=lfs merge=lfs -text
+*.jar filter=lfs diff=lfs merge=lfs -text
+**/YandexMobileMetrica filter=lfs diff=lfs merge=lfs -text
+**/YandexMobileMetricaCrashes filter=lfs diff=lfs merge=lfs -text
 */Fonts/*.asset filter=lfs diff=lfs merge=lfs -text
