--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.google.external-dependency-manager": "1.2.164",
+    "com.google.external-dependency-manager": "file:../Assets/Plugins/Android/com.google.external-dependency-manager-1.2.165.tgz",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.analytics": "3.3.5",
     "com.unity.burst": "1.2.3",
