--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,20 +1,21 @@
 {
-  "dependencies": {
+    "dependencies": {
     "com.google.external-dependency-manager": "file:../Assets/Plugins/Android/com.google.external-dependency-manager-1.2.165.tgz",
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.analytics": "3.3.5",
-    "com.unity.burst": "1.2.3",
-    "com.unity.device-simulator": "2.2.4-preview",
+    "com.unity.burst": "1.5.4",
+    "com.unity.cinemachine": "2.7.4",
     "com.unity.entities": "0.1.1-preview",
+    "com.unity.ide.visualstudio": "2.0.9",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.mobile.notifications": "1.3.0",
-    "com.unity.recorder": "2.4.0-preview.1",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.mobile.notifications": "1.3.2",
+    "com.unity.recorder": "2.5.5",
+    "com.unity.textmeshpro": "3.0.6",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
     "com.unity.modules.director": "1.0.0",
     "com.unity.modules.imageconversion": "1.0.0",
     "com.unity.modules.particlesystem": "1.0.0",
+    "com.unity.modules.physics": "1.0.0",
     "com.unity.modules.uielements": "1.0.0",
     "com.unity.modules.unitywebrequest": "1.0.0"
   },
