--- a/Assets/Plugins/Android/mainTemplate.gradle
+++ b/Assets/Plugins/Android/mainTemplate.gradle
@@ -1,16 +1,17 @@
 buildscript {
-    repositories {**ARTIFACTORYREPOSITORY**
+    repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.0'
-**BUILD_SCRIPT_DEPS**}
+        classpath 'com.android.tools.build:gradle:3.4.3'
+    }
 }
 
 allprojects {
-    repositories {**ARTIFACTORYREPOSITORY**
+    repositories {
         google()
         jcenter()
         flatDir {
@@ -32,11 +33,11 @@ allprojects {
     }
 }
 // Android Resolver Repos End
-apply plugin: 'com.android.application'
-**APPLY_PLUGINS**
-
+apply plugin: 'com.android.library'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:multidex:1.0.3'
+  	implementation 'com.android.installreferrer:installreferrer:1.0'
 // Android Resolver Dependencies Start
     implementation 'com.android.installreferrer:installreferrer:1.1.1' // Assets/VoodooPackages/TinySauce/Analytics/Common/3rdParty/Referrer/Android/Editor/ReferrerDependencies.xml:4
     implementation 'com.android.support:appcompat-v7:25.3.1' // Facebook.Unity.Editor.AndroidSupportLibraryResolver.addSupportLibraryDependency
@@ -53,7 +54,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-basement:17.1.0' // Assets/VoodooPackages/TinySauce/Analytics/GameAnalytics/3rdParty/GameAnalytics/Editor/GameAnalyticsDependencies.xml:4
     implementation 'com.parse.bolts:bolts-android:1.4.0' // Assets/VoodooPackages/TinySauce/Analytics/Facebook/3rdParty/FacebookSDK/Plugins/Editor/Dependencies.xml:4
 // Android Resolver Dependencies End
-**DEPS**}
+    **DEPS**
+}
 
 // Android Resolver Exclusions Start
 android {
@@ -70,42 +72,48 @@ android {
     compileSdkVersion **APIVERSION**
     buildToolsVersion '**BUILDTOOLS**'
 
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
     defaultConfig {
-        minSdkVersion **MINSDKVERSION**
-        targetSdkVersion **TARGETSDKVERSION**
-        applicationId '**APPLICATIONID**'
-        ndk {
-            abiFilters **ABIFILTERS**
-        }
+        multiDexEnabled true
+        minSdkVersion 19
+        targetSdkVersion 29
         versionCode **VERSIONCODE**
         versionName '**VERSIONNAME**'
-		multiDexEnabled true
+        
+    }
+
+    dexOptions {
+        preDexLibraries false
+        javaMaxHeapSize "4g"
     }
 
     lintOptions {
         abortOnError false
     }
 
+    packagingOptions {
+       exclude  'jsr305_annotations/Jsr305_annotations.gwt.xml'
+    }
+
     aaptOptions {
-        noCompress = ['.ress', '.resource', '.obb'] + unityStreamingAssets.tokenize(', ')
+        noCompress '.unity3d', '.ress', '.resource', '.obb' + unityStreamingAssets.tokenize(', ')
         ignoreAssetsPattern = "!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~"
-    }**PACKAGING_OPTIONS****SPLITS**
-**BUILT_APK_LOCATION**
-**EXTERNAL_SOURCES**
-    bundle {
-        language {
-            enableSplit = false
+    }
+    **SIGN**
+
+    buildTypes {
+        debug {
+            jniDebuggable true
         }
-        density {
-            enableSplit = false
-        }
-        abi {
-            enableSplit = true
+        release {
+            minifyEnabled false
+            **SIGNCONFIG**
         }
     }
-}**SPLITS_VERSION_CODE****REPOSITORIES****SOURCE_BUILD_SETUP**
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}**REPOSITORIES**
+**IL_CPP_BUILD_SETUP**
+**SOURCE_BUILD_SETUP**
+**EXTERNAL_SOURCES**
